Add Montserrat fonts

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,11 @@ flutter:
     - family: GT-Sectra-Fine-Black
       fonts:
         - asset: assets\fonts\GT-Sectra-Fine-Black.ttf
+    - family: Montserrat-VariableFont_wght
+      fonts:
+        - asset: assets\fonts\Montserrat-VariableFont_wght.ttf
+        - asset: assets\fonts\Montserrat-SemiBold.ttf
+          weight: 600
     # - family: GT-Sectra-Fine-Black
     #   fonts:
     #     - asset: fonts/TrajanPro.ttf
