--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,9 @@ dependencies:
   flutter_svg: ^2.2.0
   font_awesome_flutter: ^10.8.0
   gap: ^3.0.1
-  get: ^4.7.2
   google_fonts: ^6.2.1
+  go_router: ^16.0.0
+
 
 dev_dependencies:
   flutter_lints: ^5.0.0
