--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,14 +29,14 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.8
+  equatable: ^2.0.7
   flutter:
     sdk: flutter
   flutter_svg: ^2.2.0
   font_awesome_flutter: ^10.8.0
   gap: ^3.0.1
-  google_fonts: ^6.2.1
   go_router: ^16.0.0
-
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_lints: ^5.0.0
@@ -79,6 +79,5 @@ flutter:
     #     - asset: fonts/TrajanPro.ttf
     #     - asset: fonts/TrajanPro_Bold.ttf
     #       weight: 700
-  #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
