--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   gap: ^3.0.1
   go_router: ^16.0.0
   google_fonts: ^6.2.1
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_lints: ^5.0.0
