--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.8
+  dartz: ^0.10.1
+  dio: ^5.8.0+1
   equatable: ^2.0.7
   flutter:
     sdk: flutter
@@ -37,7 +39,6 @@ dependencies:
   gap: ^3.0.1
   go_router: ^16.0.0
   google_fonts: ^6.2.1
-  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_lints: ^5.0.0
