--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   gap: ^3.0.1
   go_router: ^16.0.0
   google_fonts: ^6.2.1
+  get_it: ^8.0.3
 
 dev_dependencies:
   flutter_lints: ^5.0.0
