--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   go_router: ^16.0.0
   google_fonts: ^6.2.1
   get_it: ^8.0.3
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_lints: ^5.0.0
